test/bad/path0.pacc
/*
nopacc1 "pacc: fatal: no expressions in non-void rule \`S'"
*/

S <- "foo"
